# makoton-ai-tutor

./: .gitignore  README.md  pyproject.toml  tatus
.history/: .gitignore_20241008234315  .gitignore_20241009000824
src/makoton_ai_tutor/: hand_and_pose_detection.py  video_classification_test.ipynb
