[project]
name = "makoton-ai-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorchvideo>=0.1.5",
    "transformers>=4.45.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "torch>=2.4.1",
    "datasets>=3.0.1",
    "mediapipe>=0.10.15",
    "opencv-python>=4.10.0.84",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
